# cgminer-gpu-btc-core

./: Cargo.toml  README.md
benches/: gpu_performance.rs
examples/: basic_gpu_mining.rs  gpu_benchmark.rs  metal_gpu_demo.rs
src/: core.rs  cuda_device.rs  device.rs  factory.rs  gpu_manager.rs  lib.rs  metal_backend.rs  metal_device.rs  opencl_backend.rs  opencl_device.rs  platform_detector.rs
src/shaders/: sha256d.cl  sha256d.metal
tests/: integration_tests.rs
